<?xml version="1.0" encoding="utf-8"?>


    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="639dp"
        tools:ignore="ExtraText">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

          <TextView
              android:id="@+id/titulo_textView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="16dp"
              android:layout_marginEnd="32dp"
              android:fontFamily="sans-serif-light"
              android:gravity="center"
              android:text="@string/edp"
              android:textSize="18sp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <TextView
              android:id="@+id/subtitulo_textView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="32dp"
              android:fontFamily="sans-serif-light"
              android:gravity="center"
              android:text="@string/euro_dolar_peso"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/titulo_textView" />

          <TextView
              android:id="@+id/cantidad_textView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:fontFamily="sans-serif-light"
              android:gravity="center"
              android:text="@string/cantidad"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/subtitulo_textView" />

          <EditText
              android:id="@+id/cantidad_editTextNumber"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="32dp"
              android:ems="10"
              android:fontFamily="sans-serif-light"
              android:gravity="center"
              android:hint="@string/cantidad_"
              android:importantForAutofill="no"
              android:inputType="number"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/cantidad_textView" />

          <TextView
              android:id="@+id/desde_textView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:fontFamily="sans-serif-light"
              android:gravity="center"
              android:text="@string/desde"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/cantidad_editTextNumber" />

          <Spinner
              android:id="@+id/desde_spinner"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="32dp"
              android:entries="@array/monedas"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/desde_textView" />

          <TextView
              android:id="@+id/a_textView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:fontFamily="sans-serif-light"
              android:gravity="center"
              android:text="@string/a_divisa"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/desde_spinner" />

          <Spinner
              android:id="@+id/a_spinner"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="32dp"
              android:entries="@array/monedas"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/a_textView" />

          <Button
              android:id="@+id/convertir_button"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:backgroundTint="#FAF3DD"
              android:text="@string/convertir"
              android:textAllCaps="false"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/a_spinner" />

          <TextView
              android:id="@+id/textView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:text="@string/Nota"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/resultado_text" />

          <TextView
              android:id="@+id/resultado_text"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="32dp"
              android:layout_marginTop="32dp"
              android:layout_marginEnd="32dp"
              android:fontFamily="sans-serif-light"
              android:gravity="center"
              android:text="@string/resultado"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/convertir_button" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

